# fit-python-sdk

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  run_tests.yml
garmin_fit_sdk/: __init__.py  accumulator.py  activity_repair_filter.py  activity_repair_tool.py  bitstream.py  crc_calculator.py  decoder.py  encoder.py  fit.py  hr_mesg_utils.py  mesg_definition.py  output_stream.py  profile.py  stream.py  util.py
tests/: __init__.py  data.py  data_expand_hr_mesgs.py  test_accumulator.py  test_activity_repair.py  test_bitstream.py  test_crc_calculator.py  test_decoder.py  test_encode_activity_recipe.py  test_encoder.py  test_errors.py  test_hr_mesg_utils.py  test_mesg_definition.py  test_output_stream.py  test_stream.py  test_util.py
tests/fits/: ActivityDevFields.fit  HrmPluginTestActivity.fit  WithGearChangeData.fit
