[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin_fit_sdk"
dynamic = ["version"]
authors = [
  { name="Garmin International, Inc." },
]
description = "Garmin FIT Python SDK"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
keywords = ["garmin", "fit sdk", "fit"]
dependencies = []

[tool.setuptools.dynamic]
version = {attr = "garmin_fit_sdk.__init__.__version__"}

[bdist_wheel]
universal = 1

[project.optional-dependencies]
tests = [
    "pytest>=7.0.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.6.1",
]
