[metadata]
name = garmin-fit-sdk
version = 21.158.0
author = Garmin International, Inc.
url = https://github.com/garmin/fit-python-sdk
description = Garmin FIT Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
keywords = garmin, fit sdk, fit
license_files = LICENSE.txt

[bdist_wheel]
universal = 1

[options]
packages=find:
zip_safe = True
include_package_data = True
python_requires = >=3.6


[options.packages.find]
exclude =
    .gitignore
    .vscode*
    .pytest_cache*
    .test.py